--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "nodemon": "^2.0.20",
     "prisma": "4.10.1",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
     "table:generate": "npx prisma db push",
+    "migrate": "npx prisma migrate dev --name init",
     "show:gui": "npx prisma studio",
     "build": "tsc",
     "start": "NODE_ENV=production node dist/app.js"
